--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="#" class="button">Fazer login</a>
       </div>
     </header>
+
     <main>
       <section class="video-player">
         <iframe
@@ -111,10 +112,99 @@
         </div>
       </section>
 
-      <section class="channel">channel</section>
-      <section class="subscribe">subscribe</section>
-      <section class="ad">ad</section>
-      <section class="up-next">up-next</section>
+      <section class="channel">
+        <img src="images/channel-icon.jpg">
+
+        <div class="channel-info">
+          <h4 class="channel-name">YouTube</h4>
+          <p class="date">Publicado em 2019</p>
+          <p class="channel-description">Youtube e Coachella daqui pro mundo!</p>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <a href="#" class="button">Inscrever-se</a>
+      </section>
+
+      <section class="ad">
+        <a href="#">
+          <img src="images/ad.jpg">
+        </a>
+      </section>
+
+      <section class="up-next">
+        <a href="https://www.youtube.com/watch?v=3sD9hjz_3sY">
+          <img src="https://img.youtube.com/vi/3sD9hjz_3sY/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>ARCTIC MONKEYS LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=Id_R2zKj98I">
+          <img src="https://img.youtube.com/vi/Id_R2zKj98I/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>THE STROKES LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=PIbxh2xgE30">
+          <img src="https://img.youtube.com/vi/PIbxh2xgE30/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>KINGS OF LEON LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=ZEef_ECGoa4">
+          <img src="https://img.youtube.com/vi/ZEef_ECGoa4/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>MUSE LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=fARCFKXddNE">
+          <img src="https://img.youtube.com/vi/fARCFKXddNE/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>QUEENS OF THE STONE AGE LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=4sIbKnPHNAE">
+          <img src="https://img.youtube.com/vi/4sIbKnPHNAE/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>THE KILLERS LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=NgYGZlK91xM">
+          <img src="https://img.youtube.com/vi/NgYGZlK91xM/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>ROYAL BLOOD LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=Wwjv2Wniaeo">
+          <img src="https://img.youtube.com/vi/Wwjv2Wniaeo/mqdefault.jpg" alt="Thumbnail">
+
+          <div class="video-details">
+            <h4>THE BLACK KEYS LIVE AT COACHELLA</h4>
+            <p>Coachella Music</p>
+          </div>
+        </a>
+      </section>
     </main>
   </body>
 </html>
